--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
         }
         
         .fade-in {
-            opacity: 0;
-            transform: translateY(30px);
+            opacity: 1;
+            transform: translateY(0);
             transition: opacity 0.8s ease-out, transform 0.8s ease-out;
         }
         
