Fix complete index part 4 xd.html

--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
                         Candelaria es una iniciativa afín a IEEE PES donde se construye un carro solar para competir en la prestigiosa Bridgestone World Solar Challenge. Este proyecto representa el compromiso de nuestra comunidad con la innovación en movilidad sostenible y sistemas de energía renovable.
                     </p>
                     <!-- EDITABLE: Enlace de Candelaria -->
-                    <a href="https://candelariahub.com/" target="_blank" rel="noopener" class="project-link" style="background: linear-gradient(135deg, #6B2D8F, #9B4D96);">Más información →</a>
+                    <a href="https://candelariasun.carrd.co/" target="_blank" rel="noopener" class="project-link" style="background: linear-gradient(135deg, #6B2D8F, #9B4D96);">Más información →</a>
                 </div>
             </div>
         </div>
