Estoy cansao jefe

--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
             <!-- EDITABLE: Miembros del equipo -->
             <div class="team-card">
                 <div class="team-avatar">ID</div>
-                <div class="team-name">Isabela Delatorre</div>
+                <div class="team-name">Isabela De Latorre</div>
                 <div class="team-role">Presidente</div>
             </div>
             
@@ -779,6 +779,12 @@
                 <div class="team-avatar">AV</div>
                 <div class="team-name">Andrés Villamizar</div>
                 <div class="team-role">Tesorero</div>
+            </div>
+
+            <div class="team-card">
+                <div class="team-avatar">DV</div>
+                <div class="team-name">David Bravo</div>
+                <div class="team-role">Community Manager</div>
             </div>
         </div>
     </section>
