Espero que este sea el ultimo cambio pendejo que tenga que hacer por hoy

--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
             
             <div class="team-card">
                 <div class="team-avatar">AV</div>
-                <div class="team-name">Andrés Villamizar</div>
+                <div class="team-name">Andrés Villalba</div>
                 <div class="team-role">Tesorero</div>
             </div>
 
