--- a/contacto.html
+++ b/contacto.html
@@ -139,15 +139,6 @@
                 </a>
             </div>
 
-            <div class="contact-card">
-                <div class="icon">📍</div>
-                <h3>Ubicación</h3>
-                <p style="margin: 0;">
-                    Universidad de los Andes<br>
-                    Bogotá, Colombia<br>
-                    Carrera 1 # 18A-12
-                </p>
-            </div>
         </div>
     </section>
 
@@ -166,7 +157,7 @@
                 <h4>Contacto</h4>
                 <a href="mailto:ieeepes@uniandes.edu.co">📧 ieeepes@uniandes.edu.co</a>
                 <a href="https://www.linkedin.com/company/ieee-pes-uniandes/" target="_blank" rel="noopener">💼 LinkedIn</a>
-                <a href="https://www.instagram.com/ieeepes.uniandes/" target="_blank" rel="noopener">📸 Instagram</a>
+                <a href="https://www.instagram.com/pes_uniandes/" target="_blank" rel="noopener">📸 Instagram</a>
             </div>
             
             <div class="footer-section">
