--- a/index.html
+++ b/index.html
@@ -147,19 +147,19 @@
         <div class="team-grid">
             <!-- EDITABLE: Miembros del equipo -->
             <div class="team-card">
-                <div class="team-avatar">ID</div>
+                <img src="IMG/ISABELADELATORRE.jpeg" alt="Isabela Delatorre" class="team-avatar">
                 <div class="team-name">Isabela Delatorre</div>
                 <div class="team-role">Presidente</div>
             </div>
             
             <div class="team-card">
-                <div class="team-avatar">LA</div>
+                <img src="IMG/LUISARISTIZABAL.jpeg" alt="Luis Aristizabal" class="team-avatar">
                 <div class="team-name">Luis Aristizabal</div>
                 <div class="team-role">Vicepresidente</div>
             </div>
             
             <div class="team-card">
-                <div class="team-avatar">AV</div>
+                <img src="IMG/ANDRESVILLAMIZAR.jpeg" alt="Andrés Villamizar" class="team-avatar">
                 <div class="team-name">Andrés Villamizar</div>
                 <div class="team-role">Tesorero</div>
             </div>
