--- a/contacto.html
+++ b/contacto.html
@@ -134,8 +134,8 @@
             <div class="contact-card">
                 <div class="icon">📸</div>
                 <h3>Instagram</h3>
-                <a href="https://www.instagram.com/ieeepes.uniandes/" target="_blank" rel="noopener">
-                    @ieeepes.uniandes
+                <a href="https://www.instagram.com/pes_uniandes/" target="_blank" rel="noopener">
+                    @pes_uniandes
                 </a>
             </div>
 
