--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <h4>Recursos</h4>
                 <!-- EDITABLE: Enlaces de recursos -->
                 <a href="https://www.ieee.org" target="_blank" rel="noopener">IEEE.org</a>
-                <a href="https://pes.ieee.org" target="_blank" rel="noopener">IEEE PES</a>
+                <a href="https://pes-ieee.org" target="_blank" rel="noopener">IEEE PES</a>
                 <a href="https://uniandes.edu.co" target="_blank" rel="noopener">Universidad de los Andes</a>
             </div>
             
