--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="#trabajo-realizado">Trabajo realizado</a></li>
                 <li><a href="#proyecto-afin">Proyecto Afín</a></li>
                 <li><a href="#charlas">Charlas</a></li>
+                <li><a href="#visitas-tecnicas">Visitas Técnicas</a></li>
                 <li><a href="#trabajo-futuro">Trabajo futuro</a></li>
                 <li><a href="#equipo">Equipo</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
