--- a/contacto.html
+++ b/contacto.html
@@ -25,10 +25,13 @@
                 <img src="IMG/PESNEGRO.jpg" alt="IEEE PES Uniandes" class="navbar-logo">
             </a>
             <ul class="navbar-menu">
-                <li><a href="index.html#inicio">Inicio</a></li>
-                <li><a href="index.html#trabajo-realizado">Trabajo realizado</a></li>
-                <li><a href="index.html#proyecto-afin">Proyecto Afín</a></li>
-                <li><a href="index.html#equipo">Equipo</a></li>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#trabajo-realizado">Trabajo realizado</a></li>
+                <li><a href="#proyecto-afin">Proyecto Afín</a></li>
+                <li><a href="#charlas">Charlas</a></li>
+                <li><a href="#visitas-tecnicas">Visitas Técnicas</a></li>
+                <li><a href="#trabajo-futuro">Trabajo futuro</a></li>
+                <li><a href="#equipo">Equipo</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </div>
