--- a/proyectos/microformer.html
+++ b/proyectos/microformer.html
@@ -25,9 +25,14 @@
                 <li><a href="../index.html#inicio">Inicio</a></li>
                 <li><a href="../index.html#trabajo-realizado">Trabajo realizado</a></li>
                 <li><a href="../index.html#proyecto-afin">Proyecto Afín</a></li>
+                <li><a href="../index.html#charlas">Charlas</a></li>
+                <li><a href="../index.html#visitas-tecnicas">Visitas Técnicas</a></li>
+                <li><a href="../index.html#trabajo-futuro">Trabajo futuro</a></li>
                 <li><a href="../index.html#equipo">Equipo</a></li>
                 <li><a href="../contacto.html">Contacto</a></li>
             </ul>
+
+
         </div>
     </nav>
 
